Fix some layout overlap issues on other profile page

--- a/views/styles/other-user-profile.css
+++ b/views/styles/other-user-profile.css
@@ -77,6 +77,15 @@
   }
 
   .profile-header-wrapper-other-user {
-    padding-bottom: 3%;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    padding-top: 0;
+    margin-top: 0;
+  }
+
+  .profile-info {
+    padding-bottom: 30%;
+    margin-bottom: 0;
+    padding-top: 35%;
   }
 }
